style.css
/*

Theme Name: Amanda Rincon Business Project Theme
Theme URI: Amanda Rincon Business Project
Author: Amanda Rincon
Description: Business project themes for WEI course
Version: 0.1
License: Open
Text Domain: amanda_rincon_business_project

*/

@import url("css/normalize.css");
@import url("css/skeleton.css");

@font-face {
	font-family: Great-Vibes;
	src: url("fonts/GreatVibes-Regular.otf");
}

*{
    color: #000000;
    font-size: 16px;
}

body {
	font-family: 'News Cycle', sans-serif;
	background-image: url( 'img/logo-transparent-crop.png' );
	background-repeat: no-repeat;
	background-position: 0% 100%;
}

h1,
h2 {
	color: #d65076;
	text-align: center;
	margin-top: 30px;
}

h2 {
	text-transform: uppercase;
	margin: 0;
	padding-bottom: 10px;
	letter-spacing: 2px;
}

h3 {
	font-family: Great-Vibes;
	color: #666666;
}

h4 {
	color: #55b4b0;
	font-size: 2.5rem;
	margin-top: 0;
	margin-bottom: 40px;
}

p {
	font-size: 2.5rem;
	color: #666666;
}

#container {
	width: 100%;
}

/*--- Search Bar --- */

#search-form {
	margin-top: 15px;
}

.wie-search-form .screen-reader-text, .wie-hide {
    position: absolute;
    left: -999em;
    width: 1em;
    overflow: hidden;
}

.search-bar-icon {
    border: none;
    text-align: center;
    padding: 5px;
    background-color: #efefef;
    margin: 0;
    min-height: 20px;
    border-top: 1px solid #b7b7b7;
    border-bottom: 1px solid #b7b7b7;
    border-right: 1px solid #b7b7b7;
	-webkit-border-radius: 0px 7px 7px 0px;
	border-radius: 0px 7px 7px 0px;
}

input[type="search"] {
    border: none;
    border-top: 1px solid #b7b7b7;
    border-bottom: 1px solid #b7b7b7;
    border-left: 1px solid #b7b7b7;
    min-height: 20px;
    padding: 0;
    width: 100%;
    border-radius: inherit;
    margin:0;
    background-color: #efefef;
	-webkit-border-radius: 7px 0px 0px 7px;
	border-radius: 7px 0px 0px 7px;
}

.fa {
	color:#b7b7b7;
}

.search-bar-icon .fa-2x {
    font-size: 1.4em;
}

/*--- Menu --- */

.menu-menu-container {
	width: 85%;
	margin: auto;
	margin-top: 20px;
	padding: 10px 0;
	border-top: 1px solid #b7b7b7;
	border-bottom: 1px solid #b7b7b7;
	text-align: justify;
}

.menu-menu-container ul {
    padding: 0;
    list-style-type: none;
    list-style-image: none;
	width: 90%;
	margin: auto;
}

.menu-menu-container li {
    display: inline;
}

.menu-menu-container ul li a {
	color: #666666;
    text-decoration: none;
	font-size: 2.75rem;
	text-transform: uppercase;
	letter-spacing: 2px;
}

.menu-menu-container ul li a:hover {
    color: #55b4b0;
}

.menu-menu-container ul li.current-menu-item a {
	color: #55b4b0;
}

.single-post-thumbnail img {
	width: 100%;
	height: auto;
}

/*--- Home Page --- */

header {
	height: 100%;
}

#hero {
	margin: 0;
	padding: 0;
	width: 100%;
	height: 100%;
	z-index: -999;
	overflow-y: hidden;
}

#hero img {
	width: 100%;
}

#logo {
	width: 20%;
	position: absolute;
	top: 40px;
	right: 0;
}

#logo img {
	width: 100%;
}

#social {
	width: 30%;
	position: absolute;
	top: 80px;
	left: 50px;
}

#social img {
	width: 6%;
	margin-right: 40px;
}

#social img:last-child {
	margin-right: 0;
}

#about h1 {
	margin: 60px 0;
}

#about p {
	text-align: center;
}

#arrow img {
	width: 100%;
}

@media (min-width: 300px) {
	#arrow {
		width: 0%;
	}
}

@media (min-width: 1200px) {
	#arrow {
		width: 15%;
	}
	.fix{
		position: absolute;
		bottom: -20px;
		left: 40%;
	}
}

/*--- Blog Page --- */

#blog {
	width: 85%;
	margin: auto;
}

#posts,
#sidebar {
	margin-top: 80px;
}

#posts {
	border-left: 1px solid #b7b7b7;
	padding-left: 40px;
}

#posts h3 {
	font-family: 'News Cycle', sans-serif;
	color: #d65076;
}

#posts p {
	font-size: 20px;
}

#sidebar-logo {
	width: 50%;
	margin: auto;
	padding-bottom: 50px;
}

#sidebar-logo img {
	width: 100%;
}

#sidebar-social {
	width: 80%;
	margin: auto;
	margin-bottom: 70px;
}

#sidebar-social img {
	width: 15%;
	margin-right: 10px;
}

#sidebar-social img:last-child {
	margin-right: 0;
}

#sidebar #search-form {
	margin-bottom: 50px;
}

/*--- Pricing Page --- */

#pricing {
	padding: 0;
	margin-top: 150px;
}

.four.columns {
	text-align: center;
	border-left: 1px solid #b7b7b7;
	padding-left: 40px;
	padding-top: 20px;
	height: 350px;
}

.four.columns:first-child {
	border-left: none;
	padding-left: 0;
}

.four.columns p {
	margin: 0;
}

/*--- Contact Page --- */

#form{
	margin-top: 100px;
}

/*--- Footer --- */

footer {
	text-align: center;
	margin-top: 150px;
}

